# yolov8-tensorrt-cpp

./: .gitignore  CMakeLists.txt  README.md  export-det.py  export-seg.py  export_onnx.py  export_seg.py  pyproject.toml
cmake/: FindTensorRT.cmake
config/: detection_default.json  pose_default.json  segmentation_default.json
detection/include/: common.hpp  yolov8.hpp
detection/src/: detection.cpp  yolov8.cpp
models/: common.py  engine.py
pose/: main.cpp
pose/include/: common.hpp  yolov8-pose.hpp
pose/src/: pose.cpp  yolov8-pose.cpp
segmentation/include/: common.hpp  yolov8-seg.hpp
segmentation/src/: segmentation.cpp  yolov8-seg.cpp
wheels/: tensorrt-8.6.1-cp310-none-linux_x86_64.whl
